--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
             android:layout_weight="1" />
 
         <TextView
-            android:id="@+id/tV"
+            android:id="@+id/counterTv"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="5"
@@ -91,6 +91,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
+            android:onClick="count"
             android:text="Count"
             android:textSize="24sp" />
 
@@ -120,6 +121,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
+            android:onClick="reset"
             android:text="Reset"
             android:textSize="24sp" />
 
@@ -149,6 +151,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
+            android:onClick="exit"
             android:text="Exit"
             android:textSize="24sp" />
 
